objects/ASI_KOR_Incentive_Scheme__c.object
<CustomObject>
    <fields>
        <fullName>ASI_KOR_Basic_Unit_Cost__c</fullName>
        <label>Basic Unit Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Branch_Code__c</fullName>
        <label>Branch Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Branch__c</fullName>
        <label>Branch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>ASI_KOR_Brand__c</referenceTo>
        <relationshipLabel>Incentive Schemes</relationshipLabel>
        <relationshipName>ASI_KOR_Incentive_Schemes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_CA_Unit_Cost__c</fullName>
        <label>CA Unit Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Channel__c</fullName>
        <label>Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Contract__c</fullName>
        <label>Contract</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contracted-Prepay</fullName>
                </value>
                <value>
                    <fullName>non-Contracted</fullName>
                </value>
                <value>
                    <fullName>Contracted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_Conversion_to_Case__c</fullName>
        <label>Conversion to Case</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Effective_End_Date__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Effective_Start_Date__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Grade__c</fullName>
        <label>Grade</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Sales_Bracket__c</fullName>
        <label>Sales Bracket</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_UOM__c</fullName>
        <label>UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Year__c</fullName>
        <label>Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Incentive Scheme</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Basic_Unit_Cost__c</columns>
        <columns>ASI_KOR_Brand__c</columns>
        <columns>ASI_KOR_Channel__c</columns>
        <columns>ASI_KOR_Effective_Start_Date__c</columns>
        <columns>ASI_KOR_Effective_End_Date__c</columns>
        <columns>ASI_KOR_Sales_Bracket__c</columns>
        <columns>ASI_KOR_UOM__c</columns>
        <columns>ASI_KOR_Year__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Local_TOT</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Basic_Unit_Cost__c</columns>
        <columns>ASI_KOR_Brand__c</columns>
        <columns>ASI_KOR_Channel__c</columns>
        <columns>ASI_KOR_Effective_Start_Date__c</columns>
        <columns>ASI_KOR_Effective_End_Date__c</columns>
        <columns>ASI_KOR_Sales_Bracket__c</columns>
        <columns>ASI_KOR_UOM__c</columns>
        <columns>ASI_KOR_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Channel__c</field>
            <operation>equals</operation>
            <value>Local TOT</value>
        </filters>
        <label>All_Local TOT</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Year_2016</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Basic_Unit_Cost__c</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>ASI_KOR_Brand__c</columns>
        <columns>ASI_KOR_CA_Unit_Cost__c</columns>
        <columns>ASI_KOR_Channel__c</columns>
        <columns>ASI_KOR_Effective_Start_Date__c</columns>
        <columns>ASI_KOR_Effective_End_Date__c</columns>
        <columns>ASI_KOR_Sales_Bracket__c</columns>
        <columns>ASI_KOR_UOM__c</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Contract__c</columns>
        <columns>ASI_KOR_Grade__c</columns>
        <columns>ASI_KOR_Branch_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <label>All-Year 2016</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Year_2016_Effective_Date_2016_07_01</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Basic_Unit_Cost__c</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>ASI_KOR_Brand__c</columns>
        <columns>ASI_KOR_CA_Unit_Cost__c</columns>
        <columns>ASI_KOR_Channel__c</columns>
        <columns>ASI_KOR_Effective_Start_Date__c</columns>
        <columns>ASI_KOR_Effective_End_Date__c</columns>
        <columns>ASI_KOR_Sales_Bracket__c</columns>
        <columns>ASI_KOR_UOM__c</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Contract__c</columns>
        <columns>ASI_KOR_Grade__c</columns>
        <columns>ASI_KOR_Branch_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Effective_Start_Date__c</field>
            <operation>greaterThan</operation>
            <value>6/30/2016</value>
        </filters>
        <filters>
            <field>ASI_KOR_Branch_Code__c</field>
            <operation>equals</operation>
            <value>570</value>
        </filters>
        <label>Year 2016(Effective Date &gt;=2016.07.01)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Year_2016_Effective_Date_2016_12_01</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Basic_Unit_Cost__c</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>ASI_KOR_Brand__c</columns>
        <columns>ASI_KOR_CA_Unit_Cost__c</columns>
        <columns>ASI_KOR_Channel__c</columns>
        <columns>ASI_KOR_Effective_Start_Date__c</columns>
        <columns>ASI_KOR_Effective_End_Date__c</columns>
        <columns>ASI_KOR_Sales_Bracket__c</columns>
        <columns>ASI_KOR_UOM__c</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Contract__c</columns>
        <columns>ASI_KOR_Grade__c</columns>
        <columns>ASI_KOR_Branch_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Effective_Start_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>12/1/2016</value>
        </filters>
        <label>Year 2016(Effective Date &gt;=2016.12.01)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Year_2017_18_Effective_Date_2017_05_01</fullName>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Effective_Start_Date__c</columns>
        <columns>ASI_KOR_Effective_End_Date__c</columns>
        <columns>ASI_KOR_Channel__c</columns>
        <columns>ASI_KOR_Brand__c</columns>
        <columns>ASI_KOR_UOM__c</columns>
        <columns>ASI_KOR_Sales_Bracket__c</columns>
        <columns>ASI_KOR_Basic_Unit_Cost__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Effective_Start_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>12/1/2017</value>
        </filters>
        <label>Year 2017/18(Effective Date =2017.12.01)</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IC{YYYY}{MM}{DD}-{000}</displayFormat>
        <label>Incentive Scheme Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incentive Schemes</pluralLabel>
    <recordTypes>
        <fullName>ASI_KOR_TSO</fullName>
        <active>true</active>
        <label>ASI KOR TSO</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>